# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-04-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg
    * Fix error on CLOUDI_CORE_STANDALONE external service configuration

2014-04-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg
    * Simplify FUNCTION macro

2014-04-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the 17.0 dict:dict() type usage more specific

2014-04-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the Erlang/OTP release configure check on OSX

2014-04-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlasticsearch

2014-04-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve type changes for Erlang/OTP 17.0 compilation
      (17.0rc1 will not be supported due to inconsistencies with 17.0)

2014-04-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for Erlang/OTP 17.0 compilation

2014-04-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add service name pattern support to cloudi_service_router
    * Fix the run_erl logging settings for the erlang.log.? files

2014-04-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add url-path RequestInfo parameter to cloudi_service_http_elli
    * Add cloudi_service_filesystem initialization configuration for
      notify_one and notify_all (these should be preferred to avoid
      problems after service crashes)
    * Add cloudi_service_filesystem notify_on_start
      initialization configuration to provide simpler
      file-based initialization for dependent services

2014-04-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add url-path RequestInfo parameter so that
      service name parsing isn't necessary
      (to cloudi_service_http_cowboy)
    * Add cloudi_service_filesystem interface functions
      notify_all, notify_one, notify_clear to receive
      file update notifications
