@@ -826,7 +826,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, false},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -836,7 +837,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, false},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -846,7 +848,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, false},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -856,7 +859,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, false},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -866,7 +870,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -876,7 +881,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -886,7 +892,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -896,7 +903,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 1000},
          {reload, true}]},
@@ -906,7 +914,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 4},
          {reload, true}]},
@@ -916,7 +925,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 4},
          {reload, true}]},
@@ -926,7 +936,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 4},
          {reload, true}]},
@@ -936,7 +947,8 @@
         [],
         immediate_local,
         5000, 10000, 10000, [api], undefined, 4, 5, 300,
-        [{duo_mode, true},
+        [{application_name, cloudi_service_messaging_sequence},
+         {duo_mode, true},
          {hibernate, true},
          {request_pid_uses, 4},
          {reload, true}]}
