@@ -1,5 +1,9 @@
 {application, cloudi_service_hexpi,
   [{description, "CloudI Test HexPI Erlang Application"},
    {vsn, "1.2.2"},
-   {modules, [cloudi_service_hexpi]},
-   {applications, [stdlib, kernel]}]}.
+   {modules,
+    [cloudi_service_hexpi]},
+   {applications,
+    [cloudi_core,
+     stdlib,
+     kernel]}]}.
